[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf>=1.7.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pdfkit>=1.0.0",
    "plotly>=6.0.1",
    "reportlab>=4.4.0",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
]
